restructuration code, ajout bouton suppression de la réservation

--- a/formulaires.css
+++ b/formulaires.css
@@ -94,3 +94,9 @@
         padding: 20px;
         height: fit-content;
     }
+
+    #delete_resa {
+        background-color: red;
+        padding: 20px;
+        height: fit-content;
+    }
