rajout etape validation suppression profil

--- a/formulaires.css
+++ b/formulaires.css
@@ -105,3 +105,8 @@
         padding: 20px;
         height: fit-content;
     }
+
+    #confirm_delete {
+        margin-top: 40px;
+        background-color: red;
+    }
