--- a/formulaires.css
+++ b/formulaires.css
@@ -110,3 +110,122 @@
         margin-top: 40px;
         background-color: red;
     }
+
+
+#resa-form-main {
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+    #resa-form {
+        width: 80%;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 10%;
+        margin-top: 50px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #resa-form .formulaire {
+    width: 40%;
+    padding: 10px;
+    }
+
+    #resa-form h2{
+        font-size: 100%;
+        margin-bottom: 10px;
+    }
+
+    #resa-form h3{
+        font-size: 100%;
+        margin-bottom: 10px;
+    }
+
+    #resa-form #title-user {
+        height: 30px;
+        font-size: 90%;
+        margin-bottom: 10px;
+    }
+
+    #resa-form label {
+        height: 20px;
+        font-size: 80%;
+    }
+
+    #resa-form input {
+        height: 30px;
+        font-size: 90%;
+    }
+
+    #resa-form select {
+        height: 30px;
+        font-size: 90%;
+    }
+
+    #resa-form textarea {
+        height: 30px;
+        font-size: 90%;
+    }
+
+    #resa-form #desc {
+        height: 80px;
+        font-size: 90%;
+    }
+
+    #resa-form button {
+        height: 30px;
+        font-size: 90%;
+    }
+
+    table {
+    font-size: 50%;
+    width: 30%;
+    margin-right: 30px;
+    height: 40%;
+    }
+
+    th {
+        background-color: purple;
+        color: white;
+    }
+
+    td {
+        background-color: green;
+        margin: 0%;
+        padding: 0%;
+        width: 5%;
+        height: 40px;
+        text-align: center;
+    }
+
+    .booked {
+        background-color: red;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0%;
+    }
+
+    .closed {
+        background-color: orange;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0%;
+    }
+
+    .creneaux {
+        background-color: purple;
+        color: white;
+        border-right: none;
+      }
